Added in basic framework for powerups, and better setting menu.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,6 @@
 	"files.trimTrailingWhitespace": true,
 	"workbench.commandPalette.preserveInput": true,
 	"scm.compactFolders": false,
-	"merge-conflict.autoNavigateNextConflict.enabled": true
+	"merge-conflict.autoNavigateNextConflict.enabled": true,
+	"godotTools.editorPath.godot4": "c:\\Users\\gwheatley\\Downloads\\Godot_v4.4.1-stable_win64.exe\\Godot_v4.4.1-stable_win64.exe"
 }
